# AI-ML

./: .gitignore  Ml_1.ipynb  Ml_2.ipynb  classificationwithmultiplelayerperceptron.ipynb  data_preprocessing_template.ipynb  slm.ipynb
A2A/: a2a.py  notes.md
AI_AGENT/: main.py
AI_AGENT/chrome_langchain_db/: chroma.sqlite3
Deepagents__p/: basic_deepagent.ipynb  main.py  pyproject.toml  requirements.txt
GuardRailing/: customagent.py  healthcareagent.py  hitl.py  main.py
GuardRailing/config/: config.yml  disallowed.co
LLM/: app.py  bert.py  give_tool.py  hil.py  huggingface.py  messages.py  requirements.txt  stream.py
LLM_Evaluation/: main.py
LangGraph/: LangGraph.db  conditional_edges.py  lg1.py  lgup.py  lgup2.py  long_term_memory.py  short_term_memory.py  stream.py  summarizing_messages.py
Langchain/: lce2.py  lce3.py  lce4.py  lce5.py  lce6.py  lce7.py  lce8.py  lcel1.py  main.py  output_parser.py
MCP/: client.py  mathserver.py  pyproject.toml  weatherserver.py
NLP/: lda.py  logistic_regression.py  main.py  ner_tagging.py  pos_and_ntr.py  pos_tagging.py  practicals.py  readme.md  requirements.txt  sentiment_analysis.py  sentiment_analysis_task.py
NLP/vectorizing/: bag_of_mouth.py  tfid.py
Part1/: preprocessing1.py
Part10/ModelSelection/: main.py
Part10/XGBoost/: main.py
Part3/DecisionTree/: main.py
Part4/: main.py
Part7/: main.py
RAG/: generation.py  indexing.py  indexing_updated.py  main.py  retrival.py
RecomendationSystem/: read.md  requirements.txt
SLM/: main.py  requirements.txt
VectorStore/: main.py  project.py  vs2.py
(+35 files in other folders)
