[project]
name = "deepagents-p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.12",
    "ipykernel>=7.3.0",
    "langchain>=1.3.12",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.8",
    "tavily-python>=0.7.26",
]
